add fruits search_delegate, add font Croog Pro, add appbar transparent

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Croog Pro
+      fonts:
+        - asset: assets/fonts/CroogPro-Regular.ttf
+        - asset: assets/fonts/CroogPro-Bold.ttf
+          weight: 700
+  #         style: italic
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
